src/app.css
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@300;600&family=Roboto+Condensed&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-text-size-adjust: 100%;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
	@apply font-oswald;
}

.fade-anim {
	@apply ease-in duration-200;
}

.title {
	@apply text-6xl pb-4;
}

.subtitle {
	@apply text-xl pb-8;
}

.main-text {
	@apply text-base pb-1;
}

